# tono

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yaml
docs/: index.md  installation.md
docs/api/: agent.md  tools.md
examples/basic/: main.py
src/tono/: __init__.py  __main__.py  agent.py  base.py  logging.py
src/tono/ai/: __init__.py
src/tono/ai/anthropic/: __init__.py
src/tono/ai/openai/: __init__.py
src/tono/lib/: __init__.py  _agent.py  _docstrings.py  agent.py  base.py  docstrings.py  rich.py
src/tono/models/anthropic/: _client.py
src/tono/models/openai/: _client.py
src/tono/tools/: __init__.py  http.py  io.py
tests/: test_models.py
