[project]
name = "tono"
version = "0.1.0"
description = "A framework for building autonomous AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["python-dotenv>=1.0.1", "rich>=13.9.2", "typer>=0.12.5"]

[tool.uv]
package = true
override-dependencies = ["greenlet==3.1.0"]

[project.scripts]
tono = "tono.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
